# solana_optimizer

./: Anchor.toml  Cargo.toml
.github/workflows/: build.yml
programs/secure_counter/: Cargo.toml
src/: lib.rs
